--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.7",
+    "@uniswap/sdk": "^3.0.3",
     "@walletconnect/web3-provider": "^1.3.6",
     "axios": "^0.21.1",
     "copy-to-clipboard": "^3.3.1",
