--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.7",
-    "@uniswap/sdk": "^3.0.3",
+    "@uniswap/sdk": "^3.0.2",
     "@walletconnect/web3-provider": "^1.3.6",
     "axios": "^0.21.1",
+    "bignumber.js": "^9.0.1",
     "copy-to-clipboard": "^3.3.1",
+    "ethers": "^5.0.32",
     "fortmatic": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
